# tuggerah

./: Cargo.toml  db_file
src/: main.rs
src/data/: binary_file_entry_store.rs  binary_index_iterator.rs  binary_record_iterator.rs  binary_store_error.rs  data_store.rs  database.rs  indexed_binary_file_entry_store.rs  mod.rs  model.rs
src/persist/: database.rs
src/secret/: aes_256_cipher.rs  aes_256_cipher_string.rs  cryp_dec.rs  mod.rs
