[package]
name = "tuggerah"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.5.0"
cipher = "0.4.4"
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
serde = { version="1.0.217", features = ["derive"]}
uuid = { version="1.12.1", features = ["v4"]}
